--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -18,6 +18,7 @@
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
+    "unity-tmp-font-replacer": "https://github.com/RimuruDev/TMPFontReplacer.git",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
